firefox fix not showing br

--- a/css/main.css
+++ b/css/main.css
@@ -30,3 +30,7 @@ main {
     /*Grote van het het header element*/
     width: calc(100% - 200px);
 }
+
+h1 {
+    margin-bottom: 14px;
+}
